force-app/main/default/objects/CustomerMeetingReportOpp__c/CustomerMeetingReportOpp__c.object-meta.xml
<CustomObject>
    <label>Customer Meeting Report Opp</label>
    <nameField>
        <displayFormat>CMROpp{000000}</displayFormat>
        <label>Customer Meeting Report Opp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Meeting Report Opps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>