force-app/main/default/objects/CustomerMeetingReportOpp__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <formula>Opportunity__r.BusinessAlias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business</label>
    <type>Text</type>
</CustomField>