force-app/main/default/objects/CustomerMeetingReportOpp__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>