force-app/main/default/objects/CustomerMeetingReportOpp__c/fields/CustomerMeetingReport__c.field-meta.xml
<CustomField>
    <fullName>CustomerMeetingReport__c</fullName>
    <label>Customer Meeting Report</label>
    <referenceTo>CustomerMeetingReport__c</referenceTo>
    <relationshipLabel>Customer Meeting Opportunities</relationshipLabel>
    <relationshipName>Customer_Meeting_Report_Opps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>