force-app/main/default/objects/CustomerMeetingReportOpp__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Meeting Report</relationshipLabel>
    <relationshipName>Customer_Meeting_Report_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>